--- a/src/patternCanvas.css
+++ b/src/patternCanvas.css
@@ -2,12 +2,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100vw;
+  height: 100vh;
 }
 
 main, sidebar {
-  flex: 0 0 50%;
-  width: 50%;
-  height: 100vh;
+  flex: 1 1 50%;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
   box-sizing: border-box;
 }
@@ -50,4 +52,10 @@ section .input-container input {
 
 section + section {
   margin-top: 2rem;
+}
+
+@media (max-width: 960px) {
+  .pattern-creator {
+    flex-direction: column;
+  }
 }
