--- a/src/patternCanvas.css
+++ b/src/patternCanvas.css
@@ -56,6 +56,6 @@ section + section {
 
 @media (max-width: 960px) {
   .pattern-creator {
-    flex-direction: column;
+    flex-direction: column-reverse;
   }
 }
